--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/helloworld
+spring.datasource.username=postgres
+spring.datasource.password=173774
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+ 
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+
+ pring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
